# nb3_negotiation_agent

./: .gitignore  README.md  pom.xml  pyproject.toml
doc/: references.bib  report.tex
scripts/: exercise1.py  exercise3b.py  utils.py
src/commodityMarket/agent/: CmAction.java  CmNB3Algorithm.java  CmWorldState.java  Negotiator.java  RunMarketAndFiveAgents.java
src/commodityMarket/domain/: CommodityAssets.java  CommodityDomainInfo.java  CommodityMarket.java  CommodityMarketNotary.java  CommodityTransaction.java  CommodityUtilityProfile.java
src/commodityMarket/improvedAgent/: CmAction.java  CmNB3Algorithm.java  CmWorldState.java  ImprovedNegotiator.java  RunMarketAndFiveAgents.java
